feat: separate categories and improved the product item management
