# fastapi_backend/app/main.py
@@ -9,6 +9,7 @@ from app.routes.sales import router as sales_router
 from app.routes.purchases import router as purchases_router
 from app.routes.customers import router as customers_router
 from app.routes.cashbox import router as cashbox_router
+from app.routes.categories import router as categories_router
 from app.config import settings
 
 app = FastAPI(
@@ -58,4 +59,5 @@ app.include_router(sales_router, prefix="/sales")
 app.include_router(purchases_router, prefix="/purchases")
 app.include_router(customers_router, prefix="/customers")
 app.include_router(cashbox_router, prefix="/cashbox")
+app.include_router(categories_router, prefix="/categories")
 add_pagination(app)
